--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3517,7 +3517,7 @@ In the other way around, given a $\SCP$, one can read-off the partition in the a
 See \cref{fig: Inversion and lattice counter example} for an example of this bijection.
 
 \begin{definition}
-We say that an edge crossing is an \defn{adjacent crossing} if the two crossing elements are in adjacent blocks of the partition tree (\ie they in blocks of the form $\sigma_i|\sigma_{i+1}$ or $\tau_i|\tau_{i+1}$).
+We say that an edge crossing is an \defn{adjacent crossing} if the two crossing elements are in adjacent blocks of the partition tree (\ie they are in blocks of the form $\sigma_i|\sigma_{i+1}$ or $\tau_i|\tau_{i+1}$).
 \end{definition}
 
 \begin{lemma}
@@ -3957,23 +3957,23 @@ The corresponding $(2,n)$-partition trees present a clear symmetry
 \end{tikzpicture}
 \raisebox{3.4em}{$\xrightarrow{t(r\times r)}$}
 \begin{tikzpicture}[scale=.7]  
-\node[anchor=east] (1) at (-1.5, -1) {$13$};
-\node[anchor=east] (2) at (-1.5, -2) {$247$};
-\node[anchor=east] (3) at (-1.5, -3) {$5$};
-\node[anchor=east] (4) at (-1.5, -4) {$6$};
+\node[anchor=east] (13) at (-1.5, -1) {$13$};
+\node[anchor=east] (247) at (-1.5, -2) {$247$};
+\node[anchor=east] (5) at (-1.5, -3) {$5$};
+\node[anchor=east] (6) at (-1.5, -4) {$6$};
 %
-\node[anchor=west] (5) at (1.5, -1) {$3$};
-\node[anchor=west] (6) at (1.5, -2) {$17$};
-\node[anchor=west] (7) at (1.5, -3) {$4$};
-\node[anchor=west] (8) at (1.5, -4) {$256$};
+\node[anchor=west] (3) at (1.5, -1) {$3$};
+\node[anchor=west] (17) at (1.5, -2) {$17$};
+\node[anchor=west] (4) at (1.5, -3) {$4$};
+\node[anchor=west] (256) at (1.5, -4) {$256$};
 %
-\draw[thick] (1.east) -- (5.west); 
-\draw[thick] (2.east) -- (5.west); 
-\draw[thick] (2.east) -- (6.west); 
-\draw[thick] (3.east) -- (6.west); 
-\draw[thick] (4.east) -- (6.west); 
-\draw[thick] (4.east) -- (7.west); 
-\draw[thick] (4.east) -- (8.west);
+\draw[thick] (13.east) -- (17.west); 
+\draw[thick] (13.east) -- (3.west); 
+\draw[thick] (247.east) -- (256.west); 
+\draw[thick] (247.east) -- (17.west); 
+\draw[thick] (247.east) -- (4.west); 
+\draw[thick] (5.east) -- (256.west); 
+\draw[thick] (6.east) -- (256.west);
 %
 \end{tikzpicture}
 \end{center}
