--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -5061,7 +5061,7 @@ We shall call such geometrically defined operadic structures and tensor products
 There are exactly 
 \begin{enumerate}
 \item two geometric operadic diagonals of the Forcey multiplihedra, the $\LA$ and $\SU$ diagonals,
-\item two geometric topological cellular colored operad structures (over the Loday associahedra) on the Forcey multiplihedra,
+\item two geometric topological cellular operadic bimodule structures (over the Loday associahedra) on the Forcey multiplihedra,
 \item two compatible geometric universal tensor products of $\Ainf$-algebras and $\Ainf$-morphisms,
 \end{enumerate}
 which agree with the Tamari-type order on atomic $2$-colored nested linear trees. 
