--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1459,7 +1459,7 @@ The following statement is illustrated in \cref{fig:CoverRelRF}, choosing $c$ to
 \end{figure}
 
 \begin{proposition}\label{prop:CoverRelRF}
-In the flat poset~$\flatPoset[\multiBraidArrangement]$ labeled by rainbow forests using~\cref{prop:flatPosetMultiBraidArrangement,prop:bijectionForests}, a rainbow forest~$F$ covers a rainbow forest~$G$ if and only $G$ can be obtained from $F$ by:
+In the flat poset~$\flatPoset[\multiBraidArrangement]$ labeled by rainbow forests using~\cref{prop:flatPosetMultiBraidArrangement,prop:bijectionForests}, a rainbow forest~$F$ is covered by a rainbow forest~$G$ if and only $G$ can be obtained from $F$ by:
 \begin{enumerate}
 \item choosing a color $c$,
 \item choosing two vertices $a$ and $b$ in $V(F) \setminus V_c(F)$, with $\operatorname{Root}(a)<\operatorname{Root}(b)$,
