--- a/paper/figures/CoverRelRFFig.tex
+++ b/paper/figures/CoverRelRFFig.tex
@@ -24,11 +24,11 @@
 
 \begin{document}
 \begin{tikzpicture}
-\node(12) {$F=$\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
+\node(1) {$F=$\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
 \node[draw, circle] {$1$}
-   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
-          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
+   child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
+          child{node[circle, fill=red, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
    };
 \end{tikzpicture}
 \begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=15pt,  outer sep=0pt, baseline=.9cm]
@@ -41,25 +41,26 @@
 ;
 \end{tikzpicture}
 };
-\node[right=1cm of 12](3) {
+\node[right=1cm of 1](2) {
 \begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
 \node[draw, circle] {$1$}
-   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
-          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
+   child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
+          child{node[circle, fill=red, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
    };
 \end{tikzpicture}
 \begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=15pt,  outer sep=0pt, baseline=.9cm]
-\node[draw, circle] {$6$}
-   child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$2$}
-          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}}
-          child[thick]{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$}}     
-   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$7$}}
+\node[circle, fill=bleu, fill opacity=0.4, text opacity=1] {$2$}
+   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$6$}
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$}}     
+          child{node[thin, draw, circle, text opacity=1, anchor=center] {$7$}}     
+   }
+   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}
 ;
 \end{tikzpicture}
 };
-\draw[->] (12) edge[->] node[above] {(3)} (3);
-\node[right=1cm of 3](45) {
+\draw[->] (1) edge[->] node[above] {(2)} (2);
+\node[right=1cm of 2](3) {
 \begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
 \node[draw, circle] {$1$}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
@@ -78,8 +79,8 @@
 \node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$};
 \end{tikzpicture}
 };
-\draw[->] (3) edge[->] node[above] {(4)(5)} (45);
-\node[right=1cm of 45](6) {
+\draw[->] (2) edge[->] node[above] {(3)} (3);
+\node[right=1cm of 3](4) {
 \begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=1.9cm]
 \node[draw, circle] {$1$}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
@@ -93,6 +94,6 @@
    };
 \end{tikzpicture} $=G$
 };
-\draw[->] (45) edge[->] node[above] {(6)} (6);
+\draw[->] (3) edge[->] node[above] {(4)} (4);
 \end{tikzpicture}
 \end{document}
